# halberd

./: .gitignore  ATTRIBUTION.md  Cargo.toml  README.md  TODOS.md  demo.hbd  demo_small.hbd  flake.nix  rust-toolchain.toml  rustfmt.toml
halberd/: Cargo.toml  build.rs
halberd-codegen/: Cargo.toml  build.rs
halberd/src/: ast.rs  compiler.rs  generated.rs  lexer.rs  main.rs  parser.rs  scope.rs  tex.rs  types.rs  util.rs
halberd/src/ast/: sidecar.rs
halberd/src/compiler/: iil_phase_part2.rs  iilifying_phase.rs  scoping_phase.rs  sidecars.rs  spvifying_phase.rs  typing_phase.rs
halberd/src/iil/: block.rs  flat.rs  hierarchical.rs  mod.rs
halberd/src/spv/: mod.rs  operand_kind.rs  writer.rs
halberd/testresources/valid/: a.hbd  b.hbd  typing_fields.hbd  typing_vector_ctors.hbd
src/: ast.rs  lexer.rs  main.rs  parser.rs
