[package]
name = "halberd"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chumsky = { version = "0.12.0", features = ["pratt"] }
rstest = "0.26.1"

[build-dependencies]
check_keyword = "0.4.1"
codegen = "0.3.0"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
