[package]
name = "halberd"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["pratt"] }
derive-where = "1.6.1"
enumset = "1.1.10"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
rstest = "0.26.1"
unwrap-infallible = "1.0.0"

[build-dependencies]
check_keyword = "0.4.1"
codegen = "0.3.0"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
